--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,14 +1,13 @@
 .header {
     display: flex;
     justify-content: flex-end;
-    margin-top: 20px;
     background-color: black;
     padding-top: 20px;
     padding-bottom: 20px;
 }
 a {
     width: 50px;
-    color: white;
+    color: #ffffff;
     font-family: Arial, serif;
     padding: 25px;
     margin-right: 25px;
