--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,6 +1,6 @@
 .banner {
     height: 500px;
-    background-image: url("https://wallpapercave.com/wp/wp4779329.png");
+    background-image: url("https://c1.wallpaperflare.com/preview/746/963/770/flowers-leaves-autumn-aesthetic.jpg");
     background-size: cover;
     margin-top: 0;
 }
@@ -11,5 +11,4 @@
     color: #ffffff;
     display: flex;
     justify-content: flex-start;
-    align-content:
 }
