--- a/src/components/WhoWeAre/whoWeAre.css
+++ b/src/components/WhoWeAre/whoWeAre.css
@@ -1,6 +1,6 @@
 .whoweare-section {
     text-align: left;
-    background-image: url("https://i.ytimg.com/vi/1eeqZNn-k0Y/maxresdefault.jpg");
+    background-image: url("https://trello-attachments.s3.amazonaws.com/5e9d93537e6e747ea58f15c5/5f1f8587dcee350d781e86fa/8043a474983dd3f0b27e5b244ad37ad3/7_si.jpg");
     background-size: cover;
     height: 700px;
     margin-top: 100px;
