--- a/src/components/OurServices/ourServices.css
+++ b/src/components/OurServices/ourServices.css
@@ -1,23 +1,14 @@
 .container-section {
     display: flex;
-    margin: 0 70px;
-}
-h3 {
-    font-size: 35px;
-    font-family: "Candara", sans-serif
-}
-p {
-    font-size: 20px;
+
 }
 #box1, #box3 {
     background-color: #000000;
     color: #ffffff;
-    width: 550px;
-    padding: 20px;
 }
 #box2 {
     background-color: #f39f18;
-    width: 550px;
-    padding: 20px;
-    height: 250px;
+}
+.ourservices-title {
+    font-size: 40px;
 }
