--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,8 +1,24 @@
 .banner {
-    height: 500px;
+    height: 100vh;
     background-image: url("https://trello-attachments.s3.amazonaws.com/5e9d93537e6e747ea58f15c5/5f1f8587dcee350d781e86fa/c604b3e8f844973cb1613c047a2fc620/1.jpg");
     background-size: cover;
+    position: center;
     margin-top: 0;
+    padding: 0 60px;
+
+    img {
+        height: 250px;
+        width: 250px;
+    }
+}
+
+.banner-content {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, rgba(244,173,93,0.9)20%, #00ffff00 0%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .text {
