--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -8,7 +8,7 @@
 
     img {
         height: 250px;
-        width: 250px;
+        width: 20%;
     }
 }
 
@@ -19,6 +19,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 40px 0;
+    box-sizing: border-box;
 }
 
 .text {
@@ -27,5 +29,11 @@
     color: #ffffff;
     display: flex;
     justify-content: flex-start;
-    margin-top: 0;
+    margin: 0;
+}
+
+.black-text {
+    color: black;
+    width: 20%;
+    text-align: right;
 }
