--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,9 @@
     background-color: black;
     padding-top: 20px;
     padding-bottom: 20px;
+    position: fixed;
+    width: 100%;
+    margin-top: 20px;
 }
 a {
     width: 50px;
