--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -3,5 +3,29 @@
     background-size: cover;
 }
 .contact-form {
-    align-content:
+    display: inline;
+    align-content: start;
+}
+.contact-input {
+    padding: 12px 140px 12px 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-top: 6px;
+    margin-bottom: 16px;
+}
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.contact-item {
+    text-align: left;
+    padding-left: 40px;
+}
+.contact-label {
+    font-size: 23px;
+    display: block;
 }
