Who we are changes

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,6 +1,6 @@
 .banner {
     height: 100vh;
-    background-image: url("https://trello-attachments.s3.amazonaws.com/5e9d93537e6e747ea58f15c5/5f1f8587dcee350d781e86fa/c604b3e8f844973cb1613c047a2fc620/1.jpg");
+    background-image: url('../assets/images/image1.jpg');
     background-size: cover;
     position: center;
     margin-top: 0;
