--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -1,5 +1,5 @@
 .contact-section {
-    background-image: url("https://trello-attachments.s3.amazonaws.com/5f1f8587dcee350d781e86fa/500x333/39d7e55e481be7a26c319884d2a15770/3.jpg");
+    background-image: url('../assets/images/image5.jpg');
     background-size: cover;
 }
 .contact-form {
