--- a/src/components/WhoWeAre/whoWeAre.css
+++ b/src/components/WhoWeAre/whoWeAre.css
@@ -1,16 +1,43 @@
 .whoweare-section {
-    text-align: left;
-    background-image: url("https://trello-attachments.s3.amazonaws.com/5e9d93537e6e747ea58f15c5/5f1f8587dcee350d781e86fa/8043a474983dd3f0b27e5b244ad37ad3/7_si.jpg");
+    background-image: url('../assets/images/image7.jpg');
     background-size: cover;
-    height: 700px;
     margin-top: 100px;
+    display: flex;
+    height: 650px;
 }
-.whoweare-content {
-    width: 450px;
+.whoweare-section-one {
+    text-align: left;
+    width: 500px;
     background-color: rgba(243, 159, 24, 0.8);
-    height: 680px;
     padding: 20px 35px 0 35px;
 }
 .whoweare-text {
     font-size: 23px;
+}
+.whoweare-section-two {
+    width: 500px;
+}
+.whoweare-logo-one {
+    width: 40%;
+}
+.whoweare-image-one {
+    width: 100%;
+    height: auto;
+}
+.whoweare-section-three {
+    width: 500px;
+}
+.whoweare-logo-two {
+    width: 40%;
+}
+.whoweare-image-two {
+    width: 100%;
+}
+.whoweare-section-paragraph {
+    font-size: 20px;
+    padding: 0 10px
+}
+.whoweare-section-two-logotext {
+    color: #ffffff;
+    background-color: #000000;
 }
