--- a/src/components/OurWork/your-data.scss
+++ b/src/components/OurWork/your-data.scss
@@ -20,8 +20,7 @@
 }
 
 .your-data-rhombus-container {
-  width: 30%;
-  height: 70vh;
+  width: 25%;
   position: relative;
 }
 
@@ -52,10 +51,12 @@
 .third {
   top: 0;
   bottom: 0;
-  right: 0;
+  right: -30%;
   background: yellow;
   margin-top: auto;
   margin-bottom: auto;
+  width: 75%;
+  height: 75%;
 }
 
 .fourth {
