--- a/src/components/WhoWeAre/whoWeAre.css
+++ b/src/components/WhoWeAre/whoWeAre.css
@@ -1,43 +1,47 @@
-.whoweare-section {
+.whoweare-sections {
     background-image: url('../assets/images/image7.jpg');
     background-size: cover;
     margin-top: 100px;
     display: flex;
-    height: 650px;
 }
 .whoweare-section-one {
     text-align: left;
-    width: 500px;
     background-color: rgba(243, 159, 24, 0.8);
     padding: 20px 35px 0 35px;
+    box-sizing: border-box;
+}
+.whoweare-section {
+    width: calc(100% / 3);
 }
 .whoweare-text {
-    font-size: 23px;
+    font-size: 20px;
 }
 .whoweare-section-two {
-    width: 500px;
+
 }
 .whoweare-logo-one {
     width: 40%;
 }
 .whoweare-image-one {
     width: 100%;
-    height: auto;
+    height: 50%;
 }
 .whoweare-section-three {
-    width: 500px;
+
 }
 .whoweare-logo-two {
     width: 40%;
 }
 .whoweare-image-two {
     width: 100%;
+    height: 50%;
 }
 .whoweare-section-paragraph {
     font-size: 20px;
-    padding: 0 10px
+    height: 20%;
 }
 .whoweare-section-two-logotext {
     color: #ffffff;
     background-color: #000000;
+    height: 50%;
 }
