--- a/src/components/OurServices/ourServices.scss
+++ b/src/components/OurServices/ourServices.scss
@@ -4,12 +4,12 @@
 }
 
 #box1, #box3 {
-    background-color: #000000;
+    background-color: rgb(12, 16, 19);
     color: #ffffff;
 }
 
 #box2 {
-    background-color: #f39f18;
+    background-color: rgba(243, 159, 24, 0.9);
 }
 
 .ourservices-title {
