--- a/src/components/WhoWeAre/whoWeAre.scss
+++ b/src/components/WhoWeAre/whoWeAre.scss
@@ -64,6 +64,6 @@
 }
 .whoweare-section-two-logotext {
     color: #ffffff;
-    background-color: #000000;
+    background-color: rgb(12, 16, 19);
     height: 50%;
 }
