--- a/src/components/OurWork/your-data.scss
+++ b/src/components/OurWork/your-data.scss
@@ -2,6 +2,7 @@
   display: flex;
   padding: 20px 80px;
   box-sizing: border-box;
+  height: 70vh;
 }
 
 .items-wrapper {
@@ -13,6 +14,7 @@
 .your-data-items {
   display: flex;
   align-items: center;
+  height: calc(100%/3);
 
   img {
     width: 20%;
@@ -20,7 +22,7 @@
 }
 
 .your-data-rhombus-container {
-  width: 25%;
+  width: 35%;
   position: relative;
 }
 
