Add fonts Change Explore title styles

--- a/src/components/Explore/explore.scss
+++ b/src/components/Explore/explore.scss
@@ -1,8 +1,30 @@
+@import "../../variables";
+
+.explore-section-container {
+    position: relative;
+    padding: 140px 0 0 0;
+    margin-top: 100px;
+}
+
+.explore-section-title {
+    font-size: 170pt;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+    font-family: $section-title-font-family;
+    font-weight: 200;
+}
+
 .explore-section {
     display: flex;
     height: 60vh;
     align-items: flex-end;
+    position: relative;
+    z-index: 2;
 }
+
 .explore-container {
     width: 20%;
     height: 100%;
