--- a/src/components/OurWork/your-data.scss
+++ b/src/components/OurWork/your-data.scss
@@ -1,6 +1,10 @@
+.your-data-section {
+
+}
+
 .your-data-container {
   display: flex;
-  padding: 20px 80px;
+  padding: 0 80px 20px 80px;
   box-sizing: border-box;
   height: 70vh;
 }
@@ -20,6 +24,21 @@
     width: 20%;
   }
 }
+.your-data-title {
+  font-size: 120pt;
+  font-weight: 200;
+  text-align: right;
+  opacity: 0.2;
+  padding-right: 40px;
+}
+.your-data-icon {
+  padding-top: 40px;
+  width: 60%;
+}
+.your-data-img {
+  height: 100%;
+  width: 100%;
+}
 
 .your-data-rhombus-container {
   width: 35%;
@@ -37,7 +56,7 @@
 .first {
   top: 0;
   bottom: 0;
-  background: red;
+  background-color: rgba(12, 16, 19, 0.9);
   margin-top: auto;
   margin-bottom: auto;
 }
@@ -47,14 +66,13 @@
   left: 0;
   margin-right: auto;
   margin-left: auto;
-  background: orange;
+  background-color: rgb(243, 159, 24);
 }
 
 .third {
   top: 0;
   bottom: 0;
   right: -30%;
-  background: yellow;
   margin-top: auto;
   margin-bottom: auto;
   width: 75%;
@@ -67,5 +85,5 @@
   bottom: 0;
   margin-right: auto;
   margin-left: auto;
-  background: green;
+  background-color: rgb(243, 159, 24);
 }
