Dashbords first commit

--- a/src/components/YourData/your-data.scss
+++ b/src/components/YourData/your-data.scss
@@ -30,7 +30,9 @@
   text-align: right;
   opacity: 0.2;
   padding-right: 40px;
+  margin-top: 0;
 }
+
 .your-data-icon {
   padding-top: 40px;
   width: 60%;
