--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -1,4 +1,5 @@
 .contact-section {
+    height: 100vh;
     background-image: url('../assets/images/image7.jpg');
     background-size: cover;
 }
@@ -7,11 +8,9 @@
     align-content: start;
 }
 .contact-input {
-    padding: 12px 140px 12px 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    margin-top: 6px;
-    margin-bottom: 16px;
+    padding: 7px 20px;
 }
 input[type=submit] {
     background-color: #4CAF50;
@@ -23,9 +22,9 @@ input[type=submit] {
 }
 .contact-item {
     text-align: left;
-    padding-left: 40px;
+    padding: 5px 0 5px 40px;
 }
 .contact-label {
-    font-size: 23px;
+
     display: block;
 }
