Changes in text, our work place and Your data title font

--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -25,6 +25,7 @@ input[type=submit] {
     padding: 5px 0 5px 40px;
 }
 .contact-label {
-
+    font-family: Arial, serif;
+    font-weight: bold;
     display: block;
 }
