--- a/src/components/WhoWeAre/whoWeAre.scss
+++ b/src/components/WhoWeAre/whoWeAre.scss
@@ -60,7 +60,9 @@
     height: 50%;
 }
 .whoweare-section-paragraph {
-    font-size: 16px;
+    font-size: 24px;
+    font-family: Arial, serif;
+    padding: 0 9px;
 }
 .whoweare-section-two-logotext {
     color: #ffffff;
