Added font to Titles

--- a/src/components/Three/three.scss
+++ b/src/components/Three/three.scss
@@ -23,6 +23,7 @@
     visibility: hidden;
     transition: opacity 600ms, visibility 600ms;
     width: 60%;
+    font-family: Arial, serif;
 }
 
 .three-logo-container {
