--- a/src/components/OurServices/ourServices.scss
+++ b/src/components/OurServices/ourServices.scss
@@ -1,3 +1,4 @@
+@import "../../variables";
 
 .container-section {
     display: flex;
@@ -11,10 +12,11 @@
 
 #box2 {
     background-color: rgba(243, 159, 24, 0.9);
+    font-size: 200px;
 }
-
 .ourservices-title {
-    font-size: 40px;
+    font-family: $subtitle-font-family;
+    font-size: 70px;
 }
 
 .our-service-item {
