--- a/src/components/OurWork/our-work.scss
+++ b/src/components/OurWork/our-work.scss
@@ -1,3 +1,9 @@
+@import "../../variables";@import "../../variables";
+.our-work-title {
+  font-family: $subtitle-font-family;
+  font-size: 60px;
+}
+
 .our-work-container {
   height: 100vh;
 }
