--- a/src/components/OurWork/our-work.scss
+++ b/src/components/OurWork/our-work.scss
@@ -1,6 +1,6 @@
-@import "../../variables";@import "../../variables";
+@import "../../variables";
+
 .our-work-title {
-  font-family: $subtitle-font-family;
   font-size: 60px;
 }
 
