--- a/src/components/OurServices/ourServices.scss
+++ b/src/components/OurServices/ourServices.scss
@@ -3,20 +3,18 @@
 .container-section {
     display: flex;
     margin: 0 80px;
-}
-
-#box1, #box3 {
     background-color: rgb(12, 16, 19);
     color: #ffffff;
+    height: 60vh;
 }
 
-#box2 {
-    background-color: rgba(243, 159, 24, 0.9);
-    font-size: 200px;
+.our-service-item:nth-child(even) {
+    background-color: $main-orange;
+    color: rgb(12, 16, 19);
 }
-.ourservices-title {
-    font-family: $subtitle-font-family;
-    font-size: 70px;
+
+.our-services-title {
+    font-size: 40px;
 }
 
 .our-service-item {
@@ -25,7 +23,6 @@
     justify-content: center;
     flex-direction: column;
     width: calc(100% / 3);
-    height: calc(100vh / 1.5);
 
     .our-service-item-image {
         width: 100%;
@@ -39,20 +36,21 @@
         visibility: hidden;
         opacity: 0;
         transition: visibility 0s, opacity 0.5s linear;
-        height: 20%;
+        height: 0;
+        text-align: center;
     }
 }
 
 .our-service-item:hover {
     .our-service-item-image {
-        height: 60%;
+        height: 50%;
     }
 
     .our-service-item-description-wrapper {
         display: initial;
         visibility: visible;
         opacity: 1;
-        height: 40%;
+        height: 50%;
     }
 }
 .our-service-item-title{
