--- a/src/components/Three/three.scss
+++ b/src/components/Three/three.scss
@@ -2,7 +2,7 @@
 
 .three-section {
     display: flex;
-    background-image: url('../assets/images/image6.jpg');
+    background-image: url('../assets/images/section-image.jpeg');
     background-size: 100% 60%;
     background-repeat: no-repeat;
     margin: 100px 0;
