--- a/src/components/YourData/your-data.scss
+++ b/src/components/YourData/your-data.scss
@@ -12,6 +12,11 @@
   padding: 30px 80px;
   box-sizing: border-box;
 }
+.your-data-text {
+  text-align: justify;
+  font-size: 18px;
+  font-family: Arial, serif;
+}
 
 .your-data-items {
   display: flex;
