--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -48,6 +48,6 @@ input[type=submit] {
 }
 .contact-label {
   font-family: Arial, serif;
-  font-weight: bold;
   display: block;
+  font-size: 20px;
 }
