--- a/src/components/Explore/explore.scss
+++ b/src/components/Explore/explore.scss
@@ -67,5 +67,6 @@
     height: 50%;
     padding: 0 30px;
     font-family: Arial, serif;
-    font-size: 18px;
+    font-size: 20px;
+    text-align: center;
 }
