--- a/src/components/Three/three.scss
+++ b/src/components/Three/three.scss
@@ -24,6 +24,7 @@
     transition: opacity 600ms, visibility 600ms;
     width: 60%;
     font-family: Arial, serif;
+    text-align: center;
 }
 
 .three-logo-container {
