--- a/src/components/WhoWeAre/whoWeAre.scss
+++ b/src/components/WhoWeAre/whoWeAre.scss
@@ -25,6 +25,7 @@
     width: 100%;
     background-image: url('../assets/images/image2.jpg');
     background-size: cover;
+    background-position: 70% 20%;
     position: absolute;
     top: 0;
     left: 0;
