Fix some text sizes

--- a/src/components/Three/three.scss
+++ b/src/components/Three/three.scss
@@ -15,6 +15,7 @@
 
 .three-logo {
     width: 30%;
+    height: 30%;
     background-color: $main-orange;
 }
 
@@ -24,6 +25,7 @@
     transition: opacity 600ms, visibility 600ms;
     width: 60%;
     font-family: Arial, serif;
+    font-size: 18px;
     text-align: center;
 }
 
