Text align in who we are, our work on top of contact and Banner opacity

--- a/src/components/OurWork/our-work.scss
+++ b/src/components/OurWork/our-work.scss
@@ -6,6 +6,7 @@
 
 .our-work-container {
   height: 100vh;
+  margin-bottom: 200px;
 }
 
 .carousel-root, .carousel-slider, .slider-wrapper, .slider {
