--- a/src/components/Three/three.scss
+++ b/src/components/Three/three.scss
@@ -5,7 +5,7 @@
     background-image: url('../assets/images/section-image.jpeg');
     background-size: 100% 60%;
     background-repeat: no-repeat;
-    margin: 100px 0;
+    margin: 100px 0 0 0;
     height: 70vh;
     position: relative;
 }
