Banner changes, titles in our services

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -4,6 +4,7 @@
     height: 100vh;
     background-image: url('../assets/images/image1.jpg');
     background-size: cover;
+    background-position: 50% 90%;
     position: center;
     margin-top: 0;
     padding: 0 60px;
