--- a/src/components/Explore/explore.scss
+++ b/src/components/Explore/explore.scss
@@ -73,6 +73,6 @@
     height: 50%;
     padding: 0 30px;
     font-family: Arial, serif;
-    font-size: 15px;
+    font-size: 1rem;
     text-align: center;
 }
