--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   justify-content: flex-end;
-  background-color: black;
+  background-color: rgba(12, 16, 19, 0.9);
   padding-top: 20px;
   position: fixed;
   padding-bottom: 20px;
