--- a/src/components/OurServices/ourServices.scss
+++ b/src/components/OurServices/ourServices.scss
@@ -56,12 +56,12 @@
 }
 .our-service-item-title{
     font-family: Arial, serif;
-    font-size: 25px;
+    font-size: 1.30rem;
     text-align: center;
     padding-bottom: 20px;
 }
 .our-service-item-text {
     font-family: Arial, serif;
-    padding: 0 40px;
-    font-size: 20px;
+    font-size: 1.10rem;
+    margin: 0 20px 30px 20px;
 }
