--- a/src/components/WhoWeAre/whoWeAre.scss
+++ b/src/components/WhoWeAre/whoWeAre.scss
@@ -14,11 +14,12 @@
 
     h1 {
         position: relative;
-        top: -12%;
-        font-size: 75px;
+        top: -7%;
+        font-size: 4.5rem;
         width: 100%;
         text-align: center;
         font-family: $sections-sub-title-font-family;
+        margin: 0;
     }
 }
 .first-section-overlay {
@@ -40,9 +41,10 @@
 }
 
 .who-we-are-text {
-    font-size: 21px;
-    padding: 10px 50px;
-    text-align: left;
+    font-size: 1.15rem;
+    padding: 0 50px;
+    margin-top: 30px;
+    text-align: justify;
 }
 .who-we-are-text-s {
     letter-spacing: 2px;
@@ -84,10 +86,10 @@
     height: 50%;
 }
 .who-we-are-section-paragraph {
-    font-size: 21px;
+    font-size: 1.15rem;
     font-family: Arial, serif;
     text-align: left;
-    margin:  0 50px 40px 50px;
+    margin:  0 10px 40px 50px;
     padding: 0 10px;
 }
 .who-we-are-section-two-logo-text {
