Content changes and details

--- a/src/components/OurWork/our-work.scss
+++ b/src/components/OurWork/our-work.scss
@@ -6,7 +6,14 @@
 
 .our-work-container {
   height: 100vh;
-  margin-bottom: 200px;
+  margin-bottom: 300px;
+}
+.our-work-text {
+  text-align: center;
+  margin: 40px 60px 40px 60px;
+  font-size: 1.3rem;
+  font-family: Arial, serif;
+  line-height: 1.5rem;
 }
 
 .carousel-root, .carousel-slider, .slider-wrapper, .slider {
