--- a/src/components/Explore/explore.scss
+++ b/src/components/Explore/explore.scss
@@ -2,21 +2,19 @@
 
 .explore-section-container {
     position: relative;
-    padding: 140px 0 0 0;
-    margin-top: 200px;
+    padding: 110px 0 0 0;
+    margin-top: 150px;
 }
 
 .explore-section-title {
-    font-size: 170pt;
     z-index: 1;
     position: absolute;
     top: 0;
     left: 0;
     margin: 0;
-    font-family: $section-title-font-family;
-    font-weight: 200;
-    opacity: 0.3;
+    font-family: $sections-sub-title-font-family;
     padding-left: 20px;
+    font-size: 50pt;
 }
 
 .explore-section {
@@ -73,6 +71,6 @@
     height: 50%;
     padding: 0 30px;
     font-family: Arial, serif;
-    font-size: 1rem;
+    font-size: 0.9em;
     text-align: center;
 }
