--- a/src/components/OurServices/ourServices.scss
+++ b/src/components/OurServices/ourServices.scss
@@ -40,7 +40,11 @@
 .our-service-item:hover {
     .our-service-item-image {
         height: 50%;
-        margin-top: 80px;
+        position: relative;
+        top: 3rem;
+        visibility: hidden;
+        transition-duration: 1s;
+        opacity: 0;
     }
 
     .our-service-item-description-wrapper {
@@ -48,6 +52,11 @@
         visibility: visible;
         opacity: 1;
         height: 50%;
+        position: relative;
+        bottom: 5rem;
+        transition-duration: 1.5s;
+        line-height: 1.5rem;
+        font-size: 1.2rem;
     }
 
     .our-service-item-title {
@@ -55,13 +64,15 @@
     }
 }
 .our-service-item-title{
-    font-family: Arial, serif;
-    font-size: 1.30rem;
+    font-family: $section-title-font-family;
+    font-size: 1.5rem;
     text-align: center;
+    letter-spacing: 1.5px;
+    font-weight: 700;
     padding-bottom: 20px;
 }
 .our-service-item-text {
     font-family: Arial, serif;
-    font-size: 1.10rem;
+    font-size: 1rem;
     margin: 0 20px 30px 20px;
 }
