--- a/src/components/WhoWeAre/whoWeAre.scss
+++ b/src/components/WhoWeAre/whoWeAre.scss
@@ -41,10 +41,12 @@
 }
 
 .who-we-are-text {
-    font-size: 1.15rem;
+    font-size: 1.25rem;
     padding: 0 50px;
     margin-top: 30px;
     text-align: justify;
+    line-height: 150%;
+    letter-spacing: 1px;
 }
 .who-we-are-text-s {
     letter-spacing: 2px;
@@ -89,7 +91,7 @@
     font-size: 1.15rem;
     font-family: Arial, serif;
     text-align: left;
-    margin:  0 10px 40px 50px;
+    margin:  0 20px 40px 50px;
     padding: 0 10px;
 }
 .who-we-are-section-two-logo-text {
