--- a/src/components/YourData/your-data.scss
+++ b/src/components/YourData/your-data.scss
@@ -8,8 +8,8 @@
 }
 
 .items-wrapper {
-  width: 50%;
-  padding: 30px 80px;
+  width: 60%;
+  padding: 30px 80px 30px 20px;
   box-sizing: border-box;
 }
 .your-data-text {
@@ -143,6 +143,6 @@
   }
 
   img {
-    width: 30%;
+    width: 25%;
   }
 }
