--- a/src/components/OurServices/ourServices.scss
+++ b/src/components/OurServices/ourServices.scss
@@ -14,7 +14,7 @@
 }
 
 .our-service-item {
-    transition: all 0.3s;
+    transition: all 0.2s;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -38,34 +38,38 @@
 }
 
 .our-service-item:hover {
+    transition: all 1.5ms;
+
     .our-service-item-image {
-        height: 50%;
+        height: 0;
         position: relative;
         top: 3rem;
         visibility: hidden;
-        transition-duration: 1s;
         opacity: 0;
     }
 
     .our-service-item-description-wrapper {
-        display: initial;
         visibility: visible;
         opacity: 1;
-        height: 50%;
+        height: 80%;
         position: relative;
         bottom: 5rem;
-        transition-duration: 1.5s;
         line-height: 1.5rem;
         font-size: 1.2rem;
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
     }
 
     .our-service-item-title {
-        visibility: hidden;
+        transition: all 0.5s;
+        margin: 80px 0;
     }
 }
 .our-service-item-title{
     font-family: $section-title-font-family;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     text-align: center;
     letter-spacing: 1.5px;
     font-weight: 700;
