Your data to Explore your data

--- a/src/components/YourData/your-data.scss
+++ b/src/components/YourData/your-data.scss
@@ -38,12 +38,12 @@
 
 .your-data-title {
   font-family: $section-title-font-family;
-  font-size: 120pt;
+  font-size: 80pt;
   font-weight: 200;
   text-align: right;
   opacity: 0.3;
   padding-right: 40px;
-  margin: 0;
+  margin: 2rem 0 0 0;
 }
 
 .your-data-icon {
