--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,13 +1,14 @@
-@import "../../variables";
+@import '../../variables';
 
 .banner {
     height: 100vh;
+    width: 100vw;
     background-image: url('../assets/images/image1.jpg');
     background-size: cover;
     background-position: 50% 90%;
     position: center;
     margin-top: 0;
-    padding: 0 60px;
+    padding: 0 5%;
 
     img {
         height: 35%;
@@ -22,7 +23,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 40px 0;
+    padding: 3% 0;
     box-sizing: border-box;
 }
 
@@ -30,7 +31,7 @@
     font-family: adobe-garamond-pro,serif;
     font-weight: 400;
     font-style: italic;
-    font-size: 70px;
+    font-size: clamp(100%, 3.8em, 60px);
     color: #ffffff;
     display: flex;
     justify-content: flex-start;
@@ -43,4 +44,24 @@
     text-align: right;
     box-sizing: border-box;
     padding-right: 4px;
+}
+
+@media (max-width: $xs-screen) {
+    .banner {
+        img {
+            height: 45%;
+            width: 100vw;
+        }
+    }
+
+    .banner-content {
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        background: linear-gradient(270deg, rgba(244, 173, 93, 0.7) 25%, #00ffff00 0%);
+    }
+
+    .black-text {
+        width: 40%;
+    }
 }
