--- a/src/components/OurServices/ourServices.scss
+++ b/src/components/OurServices/ourServices.scss
@@ -1,11 +1,11 @@
-@import "../../variables";
+@import '../../variables';
 
 .container-section {
     display: flex;
-    margin: 0 80px;
+    margin: 0 5%;
     background-color: rgb(12, 16, 19);
     color: #ffffff;
-    height: 60vh;
+    flex-direction: column;
 }
 
 .our-service-item:nth-child(even) {
@@ -18,7 +18,8 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: calc(100% / 3);
+    width: 100%;
+    height: 50vh;
 
     .our-service-item-image {
         width: 100%;
@@ -79,4 +80,16 @@
     font-family: Arial, serif;
     font-size: 1rem;
     margin: 0 20px 30px 20px;
+}
+
+@media (min-width: $md-screen) {
+    .container-section {
+       height: 60vh;
+       flex-direction: row;
+    }
+
+    .our-service-item {
+        width: calc(100% / 3);
+        height: 100%;
+    }
 }
