--- a/src/components/WhoWeAre/whoWeAre.scss
+++ b/src/components/WhoWeAre/whoWeAre.scss
@@ -1,13 +1,13 @@
-@import "../../variables";
+@import '../../variables';
 
 .who-we-are-sections {
     margin-top: 100px;
     display: flex;
-    height: 80vh;
+    flex-direction: column;
 }
 
 .who-we-are-section {
-    width: calc(100% / 3);
+    width: 100%;
     display: flex;
     flex-direction: column;
     background-color: #000000;
@@ -53,12 +53,7 @@
 }
 
 .section-with-icon {
-    div {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+    height: 60vh;
 
     img, p {
         opacity: 0.3;
@@ -70,6 +65,16 @@
             opacity: 1;
         }
     }
+
+    div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+
+    .who-we-are-image-two, .who-we-are-image-one { display: none }
 }
 
 .who-we-are-logo-one {
@@ -83,19 +88,36 @@
 .who-we-are-logo-two {
     width: 40%;
 }
+
 .who-we-are-image-two {
     width: 100%;
     height: 50%;
 }
+
 .who-we-are-section-paragraph {
-    font-size: 1.15rem;
+    font-size: clamp(100%, 1.2em, 40px);
     font-family: Arial, serif;
     text-align: left;
     margin:  0 20px 40px 50px;
     padding: 0 10px;
 }
+
 .who-we-are-section-two-logo-text {
     color: #ffffff;
     background-color: rgb(12, 16, 19);
     height: 50%;
+}
+
+@media (min-width: $md-screen) {
+    .who-we-are-sections {
+        flex-direction: row;
+    }
+    .who-we-are-section {
+        height: 80vh;
+        width: calc(100% / 3);
+    }
+
+    .section-with-icon {
+        .who-we-are-image-two, .who-we-are-image-one { display: initial }
+    }
 }
