Who we are mobile refactor

--- a/src/components/WhoWeAre/whoWeAre.scss
+++ b/src/components/WhoWeAre/whoWeAre.scss
@@ -119,5 +119,6 @@
 
     .section-with-icon {
         .who-we-are-image-two, .who-we-are-image-one { display: initial }
+        div { height: 50% }
     }
 }
