--- a/src/components/Explore/explore.scss
+++ b/src/components/Explore/explore.scss
@@ -1,4 +1,4 @@
-@import "../../variables";
+@import '../../variables';
 
 .explore-section-container {
     position: relative;
@@ -13,37 +13,27 @@
     left: 0;
     margin: 0;
     font-family: $sections-sub-title-font-family;
-    padding-left: 20px;
-    font-size: 50pt;
+    font-size: clamp(100%, 3em, 47px);
+    padding-left: 5%;
 }
 
 .explore-section {
     display: flex;
-    height: 60vh;
     align-items: flex-end;
     position: relative;
+    flex-direction: column;
     z-index: 2;
 }
 
-/*This is the way to select all the siblings but not the hover one*/
-.explore-section:hover > .explore-container:not(:hover){
-    filter: blur(8px);
-    -webkit-filter: blur(8px);
-}
-
 .explore-container {
-    width: 20%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 2%;
     box-sizing: border-box;
     transition: all 0.5s;
-
-    &:hover {
-        background-color: rgba(243, 159, 24, 0.7);
-        width: 23%;
-    }
+    align-items: center;
 }
 
 .explore-container:nth-child(even) {
@@ -53,15 +43,14 @@
 }
 
 .explore-logo {
-    width: 90%;
+    width: 60%;
 }
 
 .hexagon {
     clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
     background-color: rgba(12, 16, 19, 0.9);
-    padding: 50px;
-    margin-bottom: 40px;
-    height: 30%;
+    margin-bottom: 15%;
+    width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -69,8 +58,42 @@
 
 .explore-text {
     height: 50%;
-    padding: 0 30px;
+    padding: 0 5%;
     font-family: Arial, serif;
-    font-size: 0.9em;
+    font-size: clamp(100%, 1.5em, 45px);
     text-align: center;
+}
+
+@media (min-width: $md-screen) {
+    .explore-section {
+        height: 60vh;
+        flex-direction: row;
+    }
+    .explore-container {
+        width: 20%;
+
+        &:hover {
+            background-color: rgba(243, 159, 24, 0.7);
+            width: 23%;
+        }
+    }
+    /*This is the way to select all the siblings but not the hover one*/
+    .explore-section:hover > .explore-container:not(:hover){
+        filter: blur(8px);
+        -webkit-filter: blur(8px);
+    }
+
+    .hexagon {
+        height: 50%;
+        padding: 20%;
+        width: 100%;
+    }
+
+    .explore-logo {
+        width: 90%;
+    }
+
+    .explore-text {
+        font-size: clamp(100%, 1.5em, 16px);
+    }
 }
