--- a/src/components/YourData/your-data.scss
+++ b/src/components/YourData/your-data.scss
@@ -1,20 +1,16 @@
-@import "../../variables";
+@import '../../variables';
 
 .your-data-container {
   display: flex;
-  padding: 0 80px 20px 80px;
-  box-sizing: border-box;
+  padding: 0 2%;
   height: 60vh;
 }
 
-.items-wrapper {
-  width: 60%;
-  padding: 30px 80px 30px 20px;
-  box-sizing: border-box;
-}
+.items-wrapper { width: 100%; }
+
 .your-data-text {
   text-align: justify;
-  font-size: 18px;
+  font-size: clamp(100%, 1.1em, 18px);
   font-family: Arial, serif;
 }
 
@@ -27,22 +23,22 @@
 
   img {
     width: 20%;
-    height: 100%;
+    height: 50%;
   }
 
   p {
-    padding: 0 40px;
+    padding: 0 3%;
     text-align: left;
   }
 }
 
 .your-data-title {
   font-family: $section-title-font-family;
-  font-size: 80pt;
+  font-size: clamp(100%, 6em, 40pt);
   font-weight: 200;
   text-align: right;
   opacity: 0.3;
-  padding-right: 40px;
+  padding-right: 8%;
   margin: 2rem 0 0 0;
 }
 
@@ -55,8 +51,7 @@
 }
 
 .your-data-rhombus-container {
-  width: 35%;
-  position: relative;
+  display: none;
 }
 
 .rhombus {
@@ -83,11 +78,6 @@
   background-color: rgba(12, 16, 19, 0.9);
   margin-top: auto;
   margin-bottom: auto;
-
-  &:hover {
-    width: 55%;
-    height: 55%;
-  }
 }
 
 .top {
@@ -97,10 +87,6 @@
   margin-left: auto;
   background-color: rgb(243, 159, 24);
 
-  &:hover {
-    width: 55%;
-    height: 55%;
-  }
 }
 
 .right {
@@ -120,11 +106,6 @@
   margin-right: auto;
   margin-left: auto;
   background-color: rgb(243, 159, 24);
-
-  &:hover {
-    width: 55%;
-    height: 55%;
-  }
 }
 
 .rhombus-hover {
@@ -132,17 +113,67 @@
   height: 55%;
 }
 
-.hover-element {
-  transition: all 0.3s;
-  background-color: #c8c8c8;
-  left: 12%;
-  height: 40%;
-
-  p {
-    font-weight: 600;
+@media (min-width: $md-screen) {
+  .your-data-container {
+    padding: 0 6% 1%;
   }
 
-  img {
-    width: 25%;
+  .your-data-title {
+    font-size: clamp(100%, 6em, 80pt);
+  }
+
+  .items-wrapper {
+    width: 60%;
+    padding: 2% 7% 2% 2%;
+  }
+
+  .your-data-rhombus-container {
+    display: initial;
+    position: relative;
+    width: 35%;
+  }
+
+  .your-data-items {
+    height: calc(100%/3);
+    padding: 0 9%;
+
+    img {
+      width: 20%;
+      height: 100%;
+    }
+  }
+
+  .left {
+    &:hover {
+      width: 55%;
+      height: 55%;
+    }
+  }
+
+  .top {
+    &:hover {
+      width: 55%;
+      height: 55%;
+    }
+  }
+
+  .bottom {
+    &:hover {
+      width: 55%;
+      height: 55%;
+    }
+  }
+
+  .hover-element {
+    transition: all 0.3s;
+    background-color: #c8c8c8;
+    left: 12%;
+    height: 40%;
+
+    p { font-weight: 600; }
+
+    img {
+      width: 25%;
+    }
   }
 }
