Fix responsive typography Refactor con sizes with pixes Code cleanning

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -30,7 +30,7 @@
     font-family: adobe-garamond-pro,serif;
     font-weight: 400;
     font-style: italic;
-    font-size: clamp(100%, 3.8em, 60px);
+    font-size: clamp(55px, 3em, 100px);
     color: #ffffff;
     display: flex;
     justify-content: flex-start;
