--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -1,9 +1,10 @@
-@import "../../variables.scss";
+@import '../../variables.scss';
 
 .contact-section {
   position: relative;
   z-index: 1;
 }
+
 .contact-section::after {
   background-image:
           linear-gradient(to left, rgba(245, 246, 252, 0.01), rgba(255, 253, 253, 0.75)),
@@ -18,6 +19,7 @@
   position: absolute;
   z-index: -1;
 }
+
 .contact-title-section {
   text-align: right;
   position: relative;
@@ -26,16 +28,17 @@
   z-index: 2;
 
   .contact-first-title {
-    font-size: 80px;
+    font-size: clamp(50px, 5vw, 80px);
     font-family: $sections-sub-title-font-family;
     margin-bottom: 10px;
   }
   .contact-second-title {
     margin-top: 0;
     font-family: $section-title-font-family;
-    font-size: 60px;
+    font-size: clamp(50px, 5vw, 60px);
   }
 }
+
 .contact-border {
   width: 70%;
   position: relative;
@@ -43,11 +46,13 @@
   padding: 60px 0 50px 0;
   border: 10px solid $main-orange;
 }
+
 .contact-form {
   display: inline;
   align-content: start;
   height: 100vh;
 }
+
 .contact-input {
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -55,10 +60,12 @@
   width: 35%;
   padding-left: 5px;
 }
+
 .contact-input-radio {
   margin: 5px 7px;
   width: 20px;
 }
+
 .contact-input-box {
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -66,6 +73,7 @@
   width: 35%;
   padding-left: 5px;
 }
+
 input[type=submit] {
   background-color: #4CAF50;
   color: white;
@@ -74,12 +82,18 @@ input[type=submit] {
   border-radius: 4px;
   cursor: pointer;
 }
+
 .contact-item {
   text-align: left;
   padding: 7px 0 7px 40px;
 }
+
 .contact-label {
   font-family: Arial, serif;
   display: block;
   font-size: 20px;
+}
+
+@media (min-width: $md-screen) {
+
 }
