--- a/src/components/OurServices/ourServices.scss
+++ b/src/components/OurServices/ourServices.scss
@@ -70,7 +70,6 @@
 }
 .our-service-item-title{
     font-family: $section-title-font-family;
-    font-size: 1.7rem;
     text-align: center;
     letter-spacing: 1.5px;
     font-weight: 700;
@@ -78,8 +77,8 @@
 }
 .our-service-item-text {
     font-family: Arial, serif;
-    font-size: 1rem;
-    margin: 0 20px 30px 20px;
+    font-size: clamp(16px, 0.4em, 40px);
+    margin: 0 5% 5%;
 }
 
 @media (min-width: $md-screen) {
