--- a/src/components/WhoWeAre/whoWeAre.scss
+++ b/src/components/WhoWeAre/whoWeAre.scss
@@ -9,13 +9,13 @@
 .who-we-are-section {
     width: 100%;
     display: flex;
+    height: 50vh;
     flex-direction: column;
     background-color: #000000;
 
     h1 {
         position: relative;
-        top: -7%;
-        font-size: 4.5rem;
+        bottom: 6%;
         width: 100%;
         text-align: center;
         font-family: $sections-sub-title-font-family;
@@ -41,7 +41,7 @@
 }
 
 .who-we-are-text {
-    font-size: 1.25rem;
+    font-size: clamp(18px, 0.9rem, 30px);
     padding: 0 50px;
     margin-top: 30px;
     text-align: justify;
@@ -61,9 +61,7 @@
     }
 
     &:hover {
-        img, p {
-            opacity: 1;
-        }
+        img, p { opacity: 1; }
     }
 
     div {
@@ -77,25 +75,15 @@
     .who-we-are-image-two, .who-we-are-image-one { display: none }
 }
 
-.who-we-are-logo-one {
-    width: 40%;
-}
-.who-we-are-image-one {
-    width: 100%;
-    height: 50%;
-}
+.who-we-are-logo-one, .who-we-are-logo-two { width: 40%; }
 
-.who-we-are-logo-two {
-    width: 40%;
-}
-
-.who-we-are-image-two {
+.who-we-are-image-one, .who-we-are-image-two {
     width: 100%;
     height: 50%;
 }
 
 .who-we-are-section-paragraph {
-    font-size: clamp(100%, 1.2em, 40px);
+    font-size: clamp(18px,0.6rem, 30px);
     font-family: Arial, serif;
     text-align: left;
     margin:  0 20px 40px 50px;
