--- a/src/global-classes.scss
+++ b/src/global-classes.scss
@@ -1,7 +1,8 @@
-@import "./variables.scss";
+@import './variables.scss';
 
 .section-subtitle {
   text-align: center;
-  font-size: 50px;
+  font-size: clamp(50px, 1.6em, 80px);
   font-family: $sections-sub-title-font-family;
+  margin: 3% 0;
 }
