--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,24 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 * {
   box-sizing: border-box;
+}
+
+html { font-size: 2vw }
+
+h1,h2,h3,h4,p { margin: 0; }
+
+h1 { font-size: clamp(55px, 2.4em, 100px); }
+
+h2 { font-size: clamp(50px, 1.4em, 80px); }
+
+h3 { font-size: clamp(35px, 1.1em, 65px ) }
+
+p {
+  font-family: Arial, serif;
+  font-size: clamp(16px, 0.6em, 40px) ;
 }
