--- a/src/components/OurServices/ourServices.scss
+++ b/src/components/OurServices/ourServices.scss
@@ -53,10 +53,7 @@
         visibility: visible;
         opacity: 1;
         height: 80%;
-        position: relative;
-        bottom: 5rem;
         line-height: 1.5rem;
-        font-size: 1.2rem;
         display: flex;
         align-content: center;
         justify-content: center;
@@ -65,9 +62,10 @@
 
     .our-service-item-title {
         transition: all 0.5s;
-        margin: 80px 0;
+        margin: 3% 0;
     }
 }
+
 .our-service-item-title{
     font-family: $section-title-font-family;
     text-align: center;
@@ -77,8 +75,9 @@
 }
 .our-service-item-text {
     font-family: Arial, serif;
-    font-size: clamp(16px, 0.4em, 40px);
+    font-size: clamp(20px, 0.4em, 40px);
     margin: 0 5% 5%;
+    line-height: 3rem;
 }
 
 @media (min-width: $md-screen) {
@@ -91,4 +90,6 @@
         width: calc(100% / 3);
         height: 100%;
     }
+
+    .our-service-item-text { line-height: 1rem; }
 }
