--- a/src/components/OurServices/ourServices.scss
+++ b/src/components/OurServices/ourServices.scss
@@ -82,6 +82,10 @@
 }
 
 @media (max-width: $xs-screen) {
+    .our-service-item {
+        height: 70vh;
+    }
+
     .visibleClass {
         transition: all 1.5ms;
 
