--- a/src/components/Explore/explore.scss
+++ b/src/components/Explore/explore.scss
@@ -20,12 +20,12 @@
 }
 
 .explore-container {
-    height: 40vh;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     padding: 2%;
     box-sizing: border-box;
-    transition: all 0.5s;
+    transition: all 300ms;
     align-items: center;
 }
 
@@ -46,8 +46,8 @@
 }
 
 .explore-text {
-    height: 50%;
     padding: 0 5%;
+    font-size: clamp(18px, 0.6em, 40px);
     text-align: center;
 }
 
@@ -56,12 +56,12 @@
         filter: blur(8px);
         -webkit-filter: blur(8px);
         padding: 5% 0;
+        justify-content: center;
     }
 
     .explore-container.visibleClass {
-        transition: all 1.5ms;
+        transition: all 300ms;
         background-color: rgba(243, 159, 24, 0.7);
-        height: 60vh;
         filter: blur(0px);
         -webkit-filter: blur(0px);
     }
