--- a/src/components/YourData/your-data.scss
+++ b/src/components/YourData/your-data.scss
@@ -3,7 +3,6 @@
 .your-data-container {
   display: flex;
   padding: 0 2%;
-  height: 60vh;
 }
 
 .items-wrapper { width: 100%; }
@@ -16,7 +15,7 @@
 .your-data-items {
   display: flex;
   align-items: center;
-  height: calc(100%/3);
+  height: 40vh;
   position: relative;
   transition: all 0.3s;
 
@@ -39,6 +38,7 @@
   opacity: 0.3;
   padding-right: 8%;
   margin-top: 2rem;
+  margin-bottom: 6rem;
 }
 
 .your-data-icon {
@@ -114,8 +114,11 @@
 
 @media (min-width: $md-screen) {
   .your-data-container {
+    height: 60vh;
     padding: 0 6% 1%;
   }
+
+  .your-data-title { margin-bottom: 0; }
 
   .items-wrapper {
     width: 60%;
