--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -60,6 +60,13 @@
   border-radius: 4px;
   height: 40px;
   width: 100%;
+  transition: 300ms;
+}
+
+.contact-input.error {
+  border: 3px solid $red-errors;
+  background-color: #cc001712;
+  font-weight: 600;
 }
 
 .contact-input-box {
@@ -69,13 +76,49 @@
   width: 100%;
 }
 
-input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
+.error-message {
+  font-size: clamp(16px, 0.2em, 22px);
+  color: $red-errors;
+}
+
+button[type=submit] {
+  background-color: $main-orange;
+  color: $white-color;
   padding: 3% 10%;
-  border: none;
-  border-radius: 4px;
+  border: 2px solid $main-orange;
   cursor: pointer;
+  transition: 300ms;
+}
+
+button[type=submit]:hover {
+  background-color: $white-color;
+  color: $main-orange;
+  border: 2px solid $main-orange;
+}
+
+.message {
+  min-height: 3em;
+  border: 1px solid;
+  border-radius: 2px;
+  padding: 2%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  h2 { font-size: clamp(24px, 0.2em, 30px); }
+  p { font-size: clamp(16px, 0.2em, 24px); }
+}
+
+.message.error {
+  background-color: #cc001712;
+  color: $red-errors;
+  border: 2px solid $red-errors;
+}
+
+.message.succeed {
+  background-color: #1ec61e40;
+  color: $green-succeed;
+  border: 2px solid $green-succeed;
 }
 
 @media (min-width: $md-screen) {
