--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,8 @@
+//Colors
 $main-orange: rgba(243, 159, 24, 0.9);
-$section-title-font-family: 'CODE light';
-$sections-sub-title-font-family: 'CODE bold';
+$red-errors: #cc0017;
+$green-succeed: #33a533;
+$white-color: #ffffff;
 
 //Text sizes
 $links-and-cta-font-size: clamp(100%, 1.1em, 27px);
@@ -11,6 +13,9 @@ $md-screen: 700px;
 $lg-screen: 1024px;
 
 //Fonts
+$section-title-font-family: 'CODE light';
+$sections-sub-title-font-family: 'CODE bold';
+
 @font-face {
   font-family: 'CODE light';
   font-style: normal;
